--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,6 @@
   <%= form.label :password %>
   <%= form.password_field :password, required: true %><br>
   <%= form.label :password_confirmation %>
-  <%= form.password_field :password_confirmation %><br>
+  <%= form.password_field :password_confirmation, required: true %><br>
   <%= form.submit "Create New User" %>
 <% end %>
